<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2019 DarkKat

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <!-- General -->
    <string name="app_name">DK Weather</string>

    <!-- Toolbar -->
    <string name="toolbar_settings_subtitle">Settings</string>

    <!-- Main -->
    <string name="action_settings">Settings</string>
    <string name="load_weather_data_title">Load weather data</string>
    <string name="update_weather_data_title">Update weather data</string>
    <string name="delete_weather_data_title">Delete weather data</string>
    <string name="location_status_disabled_message">Location is disabled</string>
    <string name="location_status_no_permission_message">No location permission</string>
    <string name="location_status_disabled_no_permission_message">Location is disabled\n\nNo location permission</string>
    <string name="weather_data_missing_title">No weather data</string>

    <!-- Dialog -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_enable">Enable</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="permission_rationale_dialog_title">Permission needed</string>
    <string name="permission_rationale_dialog_message">In order to show the weather, DK Weather needs access to the current location.\nClick \'OK\', to show the permissions dialog again.</string>
    <string name="location_disabled_dialog_title">Cannot retrieve location!</string>
    <string name="location_disabled_dialog_message">Location is disabled.\nClick \'Enable\', to open location system settings.</string>
    <string name="dialog_select_location_title">Select location</string>
    <string name="dialog_location_progress_title">Verifying location</string>

    <!-- Toast -->
    <string name="toast_cannot_retrieve_location_title">Cannot retrieve location!</string>

    <!-- Settings -->
    <string name="app_settings_title">App Settings</string>
    <string name="weather_settings_title">Weather Settings</string>

    <!-- App settings -->
    <string name="cat_theme_title">Theme</string>
    <string name="cat_settings_title">Settings</string>
    <string name="app_theme_title">App Theme</string>
    <string name="dlg_choose_theme_title">Choose a theme</string>
    <string name="day_theme">Light Theme</string>
    <string name="night_theme">Dark Theme</string>
    <string name="system_theme_title">System Theme</string>
    <string name="preference_icons_title">Preference icons</string>
    <string name="dlg_preference_icons_title">Choose to hide or show the preference icons</string>
    <string name="hide_preference_icons_space_reserved">Hide preference icons with space</string>
    <string name="hide_preference_icons">Hide preference icons</string>
    <string name="show_preference_icons">Show preference icons</string>

    <!-- Weather settings -->
    <string name="weather_use_metric_units_title">Metric units</string>
    <string name="weather_use_metric_units_on_summary">Metric units</string>
    <string name="weather_use_metric_units_off_summary">Imperial units</string>
    <string name="weather_use_custom_location_title">Use custom location</string>
    <string name="weather_use_custom_location_on_summary">Custom location will be used</string>
    <string name="weather_use_custom_location_off_summary">Current location will be used</string>
    <string name="custom_location_city_title">Location</string>
    <string name="custom_location_city_dialog_title">Enter location</string>

    <!-- Units -->
    <string name="temp_celsius_unit_title">C</string>
    <string name="temp_fahrenheit_unit_title">F</string>
    <string name="speed_kph_unit_title">&#160;kph</string>
    <string name="speed_mph_unit_title">&#160;mph</string>
    <string name="pressure_unit_title">&#160;hPa</string>
    <string name="precipitation_unit_1h_title">&#160;mm/h</string>
    <string name="precipitation_unit_3h_title">&#160;mm/3h</string>
</resources>