<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2019 DarkKat
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="weather_use_metric_units"
        app:title="@string/weather_use_metric_units_title"
        app:iconSpaceReserved="false"
        android:summaryOn="@string/weather_use_metric_units_on_summary"
        android:summaryOff="@string/weather_use_metric_units_off_summary"
        app:defaultValue="true" />

    <SwitchPreferenceCompat
        app:key="weather_use_custom_location"
        app:title="@string/weather_use_custom_location_title"
        app:iconSpaceReserved="false"
        android:summaryOn="@string/weather_use_custom_location_on_summary"
        android:summaryOff="@string/weather_use_custom_location_off_summary"
        app:defaultValue="false" />

    <EditTextPreference
        app:key="weather_custom_location_city"
        app:title="@string/custom_location_city_title"
        app:iconSpaceReserved="false"
        app:dependency="weather_use_custom_location"
        android:dialogTitle="@string/custom_location_city_dialog_title" />

</PreferenceScreen>
