<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2019 DarkKat
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="cat_theme"
        app:title="@string/cat_theme_title"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="app_theme"
            app:title="@string/app_theme_title"
            app:iconSpaceReserved="false"
            app:defaultValue="theme_follow_system"
            app:dialogTitle="@string/dlg_choose_theme_title"
            app:entries="@array/app_theme_entries"
            app:entryValues="@array/app_theme_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="cat_settings"
        app:title="@string/cat_settings_title"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="preference_icons"
            app:title="@string/preference_icons_title"
            app:iconSpaceReserved="false"
            app:defaultValue="0"
            app:dialogTitle="@string/dlg_preference_icons_title"
            app:entries="@array/preference_icons_entries"
            app:entryValues="@array/preference_icons_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
